<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="64sp"
    android:layout_marginLeft="0sp"
    android:layout_marginRight="0sp">

    <TextView
        android:id="@+id/year_row_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:height="24sp"
        android:lineHeight="16sp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/quarter_row_txt"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="year" />

    <TextView
        android:id="@+id/quarter_row_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:height="24sp"
        android:lineHeight="16sp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="quarter" />

    <TextView
        android:id="@+id/subject_row_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:height="24sp"
        android:lineHeight="16sp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/year_row_txt"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="subject" />

    <TextView
        android:id="@+id/course_row_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:height="24sp"
        android:lineHeight="16sp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/subject_row_txt"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="course" />

    <TextView
        android:id="@+id/size_row_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:height="24sp"
        android:lineHeight="16sp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/course_row_txt"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="size" />

    <Button
        android:id="@+id/removeClassButton"
        android:layout_width="49dp"
        android:layout_height="45dp"
        android:layout_marginEnd="4dp"
        android:text="X"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.526" />


</androidx.constraintlayout.widget.ConstraintLayout>