<resources>
    <string name="app_name">Birds of Feather</string>

    <string-array name="Year">
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
    </string-array>

    <string-array name="Quarter">
        <item>FA</item>
        <item>WI</item>
        <item>SP</item>
        <item>SS1</item>
        <item>SS2</item>
        <item>SSS</item>
    </string-array>

    <string-array name="Class_Size">
        <item>Tiny</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Huge</item>
        <item>Gigantic</item>
    </string-array>

    <string-array name="Sorting_Options">
        <item>Default</item>
        <item>Prioritize Small Classes</item>
        <item>Prioritize Recent</item>
    </string-array>

</resources>